# PJAText2

./: CMakeLists.txt  README.md  a_flag.cpp  a_flag.hpp  abstract_flag.hpp  c_flag.cpp  c_flag.hpp  d_flag.cpp  d_flag.hpp  dd_flag.cpp  dd_flag.hpp  f_flag.cpp  f_flag.hpp  i_flag.cpp  i_flag.hpp  introducing.cpp  introducing.hpp  isInputCorrect.cpp  isInputCorrect.hpp  l_flag.cpp  l_flag.hpp  main.cpp  mapping.cpp  mapping.hpp  my_exception.hpp  n_flag.cpp  n_flag.hpp  o_flag.cpp  o_flag.hpp  p_flag.cpp  p_flag.hpp  rs_flag.cpp  rs_flag.hpp  s_flag.cpp  s_flag.hpp  t_flag.cpp  t_flag.hpp  w_flag.cpp  w_flag.hpp
