cmake_minimum_required(VERSION 3.17)
project(PJAText2)

set(CMAKE_CXX_STANDARD 17)

add_executable(PJAText2 main.cpp f_flag.hpp n_flag.hpp d_flag.hpp dd_flag.hpp c_flag.hpp isInputCorrect.hpp w_flag.hpp f_flag.cpp n_flag.cpp d_flag.cpp dd_flag.cpp c_flag.cpp w_flag.cpp isInputCorrect.cpp abstract_flag.hpp s_flag.hpp s_flag.cpp rs_flag.hpp rs_flag.cpp l_flag.hpp l_flag.cpp a_flag.hpp a_flag.cpp p_flag.hpp p_flag.cpp o_flag.hpp o_flag.cpp i_flag.hpp i_flag.cpp mapping.hpp mapping.cpp introducing.hpp introducing.cpp t_flag.hpp t_flag.cpp my_exception.hpp)